table/src/table/Table.css
.span-container{
  position: relative;
  width:25px;
  height: 40px;
  display: inline-block;
}

.arrow-up {
  position:absolute;
  top:13px;
  left:7px;
  display: inline-block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 5.5px 6px 5.5px;
  border-color: transparent transparent var(--color5, white) transparent;
}

.arrow-down {
  position:absolute;
  top:21px;
  left:7px;
  display:inline-block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 6px 5.5px 0 5.5px;
  border-color: var(--color5, white) transparent transparent transparent;
}

.thead-container {
  display: inline-block;
  height: 40px;
  vertical-align: top;
  margin-left:5px;
  white-space: nowrap;
}

.toggle-wrap {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.table {
  border-collapse: collapse;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  height: 1px;
  /* width:100%; */
}

.table-header {
  position: relative;
  text-align: left;
  cursor: pointer;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.table-header{
  padding:0;
  height:40px;
}

.table-header-visuals{
  background-color:var(--color3, #2f3441);
  color:var(--color5, white);
}

.table-row{
  height: 100%;
  font-size: 14px;
}

.table-row-visuals:nth-child(even) {
  background-color: var(--color4, #4f5564);
}

.table-row-visuals:hover {
  background-color: var(--color11, #13cfddbd);
}

.table-header-visuals:hover {
  background-color: var(--color12, #00998f);
}

.header-cell {
  height: 40px;
  line-height: 40px;
  overflow: hidden;
}

.no-select {
  user-select: none;
}

.table-selected-row.table-selected-row {
  background-color: var(--color2, #383d47);
}

